# scraper

./: .gitignore  .travis.yml  Cargo.toml  README.md  docker-compose.yml
docker/redis-sentinel/: Dockerfile  README.md  sentinel.conf
proxy/: .gitignore  Cargo.toml  Dockerfile
proxy/src/: main.rs  task.rs
src/: frontier.rs  main.rs  rmq.rs  rmqredis.rs  split.rs  task.rs  traits.rs
worker/: .gitignore  Cargo.toml  Dockerfile  build.rs  log4rs_config.yml  log4rs_config.yml.bak
worker/src/: defaultnormaliser.rs  downloader.rs  errors.rs  main.rs  rmqredis.rs  split.rs  task.rs  traits.rs  void.rs  worker.rs
worker/src/archive/: mod.rs  rmq.rs
worker/src/extractor/: html.rs  mod.rs
worker/src/filter/: filter.rs  whitelist  whitelist.txt
worker/src/metrics/: influx_client.rs  mod.rs
