[package]
name = "worker"
version = "0.1.0"
authors = ["NicEastvillage <nicoesterby@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.1.29"
tokio = "0.1"
lapin-futures = "0.28.0"
rand = "0.7.2"
redis = "0.12.0"
url = "^2.1.0"
scraper = "^0.11.0"
